Fixed logout box z-index issues

--- a/coreUI/toolbar/styles.css
+++ b/coreUI/toolbar/styles.css
@@ -272,3 +272,7 @@ body {
   opacity: 0.5 !important;
   transition: opacity .25s ease-in-out;
 }
+
+.tingle-modal {
+    z-index: 9999999 !important;
+}
